# os-labs-fpmi

./: .gitignore
Fibonachi/: CMakeLists.txt
Fibonachi/src/: FibonacciGenerator.h  main.cpp
Fibonachi/tests/: TestFibonacciGenerator.cpp
Kolok/: .eslintrc.js  README.md  index.js  jest.config.js  package-lock.json
Kolok/src/factorial/: factorial.js  index.js
Kolok/src/linked-list/: index.js  linked-list.js
Kolok/src/unique-array/: index.js  unique-array.js
Kolok/tests/factorial/: factorial.examples.js  factorial.test.js
Kolok/tests/unique-array/: unique-array.examples.js  unique-array.test.js
Kolok3/: answer.md
Lab1/: CMakeLists.txt
Lab1/Creator/: CMakeLists.txt  Creator.cpp
Lab1/Main/: CMakeLists.txt  Main.cpp  Main.h
Lab1/Reporter/: CMakeLists.txt  Reporter.cpp  Reporter.h
Lab1/Shared/: Employee.h
Lab2/: CMakeLists.txt
Lab2/14/: CMakeLists.txt
Lab2/14/src/: main.cpp  thread_functions.cpp  thread_functions.h
Lab2/14/tests/: thread_tests.cpp
Lab2/98/: CMakeLists.txt
Lab2/98/src/: thread_functions.cpp  thread_functions.h
Lab2/98/tests/: CMakeLists.txt  thread_tests.cpp
Lab2/src/: main.cpp  thread_functions.cpp  thread_functions.h
Lab3/Lab3_17/: CMakeLists.txt  main.cpp  tests.cpp
Lab3/Lab3_98/: CMakeLists.txt  Thread.h  main.cpp  tests.cpp
Lab4/98/src/: Receiver.cpp
